--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.16)
-project(interpolator_test)
+project(inp4ff_test)
 
 set(CMAKE_C_STANDARD 90) # ANSI C
 set(CMAKE_C_STANDARD_REQUIRED True)
 
 # static lib
 set(SOURCES
-    "include/interp4/interp4ff.h"
+    "include/inp4/inp4ff.h"
     #"include/interp4/interp4fd.h"
     #"include/interp4/interp4df.h"
     #"include/interp4/interp4dd.h"
@@ -18,4 +18,4 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 # Create a tree structure of all files in src dir
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${SOURCES})
 
-target_include_directories(${PROJECT_NAME} PUBLIC "include/interp4")
+target_include_directories(${PROJECT_NAME} PUBLIC "include/inp4")
